--- a/templates/default.conf
+++ b/templates/default.conf
@@ -1,19 +1,26 @@
 
+# DO NOT CHANGE
+
 server {
 
-        listen 80; 
-        listen 443 ssl http2;
-        server_name {host};
+        listen 80 default_server;
 
-        ssl_certificate /etc/ssl/certs/nginx/{host}/server.crt;
-        ssl_certificate_key /etc/ssl/certs/nginx/{host}/server.key;
-        include /etc/nginx/includes/ssl.conf;
-        
-        location / { 
-        	include /etc/nginx/includes/proxy.conf;
-                proxy_pass http://{host};
+        server_name _;
+        root /var/www/html;
+
+        charset UTF-8;
+
+        error_page 404 /not-found.html;
+        location = /not-found.html {
+                allow   all;
+        }
+        location / {
+                return 404;
         }
 
         access_log off;
+        log_not_found off;
         error_log  /var/log/nginx/error.log error;
+
 }
+
