Added www entry to serve name

--- a/templates/site.conf
+++ b/templates/site.conf
@@ -3,7 +3,7 @@ server {
 
         listen 80; 
         listen 443 ssl http2;
-        server_name {host};
+        server_name {host} www.{host};
 
         ssl_certificate /etc/ssl/certs/nginx/{host}/server.crt;
         ssl_certificate_key /etc/ssl/certs/nginx/{host}/server.key;
