--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -1,14 +1,18 @@
-version: '2'
+version: "3"
 
 services:
+
   proxy:
-    build: ./
-    restart: always
-    image: docker-proxy
+    image: nginx
     container_name: proxy
-    networks:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - ./includes:/etc/nginx/includes
+      - ./conf.d:/etc/nginx/conf.d
+      - ./ssl:/etc/ssl/certs/nginx
+    networks:
+
 
 networks:
