--- a/templates/site.conf
+++ b/templates/site.conf
@@ -1,17 +1,17 @@
 
 server {
 
-        listen 80; 
+        listen 80;
         listen 443 ssl http2;
-        server_name {host} www.{host};
+        server_name {site} www.{site};
 
-        ssl_certificate /etc/ssl/certs/nginx/{host}/server.crt;
-        ssl_certificate_key /etc/ssl/certs/nginx/{host}/server.key;
+        ssl_certificate /etc/ssl/certs/nginx/{site}/server.crt;
+        ssl_certificate_key /etc/ssl/certs/nginx/{site}/server.key;
         include /etc/nginx/includes/ssl.conf;
-        
-        location / { 
+
+        location / {
         	include /etc/nginx/includes/proxy.conf;
-                proxy_pass http://{host};
+                proxy_pass http://{name};
         }
 
         access_log off;
