--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -6,8 +6,14 @@ services:
     image: nginx
     container_name: proxy
     ports:
-      - 80:80
-      - 443:443
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
     volumes:
       - ./includes:/etc/nginx/includes
       - ./conf.d:/etc/nginx/conf.d
