--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   proxy:
     image: nginx
-    container_name: proxy
+    restart: always
     ports:
       - "80:80"
       - "443:443"
