--- a/includes/proxy.conf
+++ b/includes/proxy.conf
@@ -7,6 +7,5 @@ proxy_request_buffering off;
 proxy_http_version 1.1;
 proxy_intercept_errors on;
 
-# Add WebSocket Support (not working...)
 proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "Upgrade";
+proxy_set_header Connection $connection_upgrade;
