--- a/templates/site.conf
+++ b/templates/site.conf
@@ -2,8 +2,10 @@
 server {
 
         listen 80;
+        listen [::]:80;
         listen 443 ssl http2;
-        server_name {site} www.{site};
+
+        server_name {site};
 
         ssl_certificate /etc/ssl/certs/nginx/{site}/server.crt;
         ssl_certificate_key /etc/ssl/certs/nginx/{site}/server.key;
