Upgrade to apps.txt as service list

--- a/templates/site.conf
+++ b/templates/site.conf
@@ -1,4 +1,8 @@
 
+upstream {name} {
+        ip_hash;
+}
+
 server {
 
         listen 80;
@@ -13,6 +17,12 @@ server {
 
         location / {
         	include /etc/nginx/includes/proxy.conf;
+
+                # websocket
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+
+                # upstream
                 proxy_pass http://{name};
         }
 
