--- a/templates/site.conf
+++ b/templates/site.conf
@@ -1,5 +1,5 @@
 
-upstream {name} {
+upstream {site} {
         ip_hash;
 }
 
@@ -10,6 +10,7 @@ server {
         listen 443 ssl http2;
 
         server_name {site};
+        server_name www.{site};
 
         ssl_certificate /etc/ssl/certs/nginx/{site}/server.crt;
         ssl_certificate_key /etc/ssl/certs/nginx/{site}/server.key;
@@ -23,7 +24,7 @@ server {
                 proxy_set_header Connection "upgrade";
 
                 # upstream
-                proxy_pass http://{name};
+                proxy_pass http://{site};
         }
 
         access_log off;
