--- a/templates/site.conf
+++ b/templates/site.conf
@@ -7,7 +7,7 @@ server {
 
         listen 80;
         listen [::]:80;
-        listen 443 ssl http2;
+        listen 443 ssl;
 
         server_name {site};
         server_name www.{site};
